@@ -34,6 +34,7 @@ Version 1.3.1+svn:
    * fix glitches when scrolling the map if zoomed out (bug #8768)
    * fix the right border glitch of the map when zooming (bug #6060 and others)
    * flying units are no longer buried in a castle (patch #709)
+   * fix the position of some halos when unit has a height offset (patch #710)
    * scenery
      * added animated windmill, fancy and damaged tents, icepack, and shipwreck
  * language and i18n:
